force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__ActualCompletionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualCompletionDateTime__c</fullName>
    <label>Actual Completion Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualCompletionDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>