force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__AssignedToId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignedToId__c</fullName>
    <label>Assigned To</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignedToId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>