force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__AssignedToObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssignedToObject__c</fullName>
    <label>Assigned To Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssignedToObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>