force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__JeopardyIntervalNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__JeopardyIntervalNumber__c</fullName>
    <label>Jeopardy Interval</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>JeopardyIntervalNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>