force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__JeopardyIntervalUnit__c.field-meta.xml
<CustomField>
    <fullName>ssot__JeopardyIntervalUnit__c</fullName>
    <label>Jeopardy Interval Unit</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>JeopardyIntervalUnit</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>