force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__JeopardyStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__JeopardyStatus__c</fullName>
    <label>Jeopardy Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>JeopardyStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>