force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__PlannedCompletionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlannedCompletionDateTime__c</fullName>
    <label>Planned Completion Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlannedCompletionDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>