force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__PlannedStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlannedStartDateTime__c</fullName>
    <label>Planned Start Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlannedStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>