force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__rel_1718545867822_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718545867822_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FulfillmentStep_AssignedToId_map_Use_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>FulfillmentStep_AssignedToId_map_Use_rel</relationshipLabel>
    <relationshipName>rel_1718545867822_end</relationshipName>
    <type>Lookup</type>
</CustomField>