force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__rel_1718546700057_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718546700057_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FulfillmentStep_FulfillmentPlanId_ma_rel</label>
    <referenceTo>ssot__FulfillmentPlan__dlm</referenceTo>
    <relationshipLabel>FulfillmentStep_FulfillmentPlanId_ma_rel</relationshipLabel>
    <relationshipName>rel_1718546700057_end</relationshipName>
    <type>Lookup</type>
</CustomField>