force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__RequestedCompletionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequestedCompletionDateTime__c</fullName>
    <label>Requested Completion Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequestedCompletionDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>