force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__RequestedStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequestedStartDateTime__c</fullName>
    <label>Requested Start Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequestedStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>