force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__RetryCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__RetryCount__c</fullName>
    <label>Retry Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RetryCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>