force-app/main/default/objects/ssot__FulfillmentStep__dlm/fields/ssot__StepType__c.field-meta.xml
<CustomField>
    <fullName>ssot__StepType__c</fullName>
    <label>Step Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StepType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>